Fix checkbox and url alignment in program records modals

--- a/credentials/static/sass/views/_program-record.scss
+++ b/credentials/static/sass/views/_program-record.scss
@@ -89,7 +89,7 @@ $record-border-color: #C2C2C2;
   }
 
   .modal-body {
-    .form-group {
+    .url-group .form-group {
       padding: 0;
       .form-control {
         -webkit-text-fill-color: inherit;
